DHBW2025-30: Refactor CarControllerTest and CarRepositoryTest to use Mockito extension and add CarService tests